sas-core/main/default/objects/Travel_Pass_Product__c/Travel_Pass_Product__c.object-meta.xml
<CustomObject>
    <label>Travel Pass Product</label>
    <nameField>
        <label>Travel Pass Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Travel Pass Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>