sas-core/main/default/objects/Travel_Pass_Product__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The account whose product this is.</description>
    <inlineHelpText>The account whose product this is.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Travel Pass Products</relationshipLabel>
    <relationshipName>Travel_Pass_Products</relationshipName>
    <type>Lookup</type>
</CustomField>