sas-core/main/default/objects/Travel_Pass_Product__c/fields/Category_Code__c.field-meta.xml
<CustomField>
    <fullName>Category_Code__c</fullName>
    <label>Category Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PAYF</fullName>
            </value>
            <value>
                <fullName>CLIP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>