sas-core/main/default/objects/Travel_Pass_Product__c/fields/Category_Name__c.field-meta.xml
<CustomField>
    <fullName>Category_Name__c</fullName>
    <label>Category Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Punches</fullName>
            </value>
            <value>
                <fullName>Pay-As-You-Fly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>