sas-core/main/default/objects/Travel_Pass_Product__c/fields/Type_Code__c.field-meta.xml
<CustomField>
    <fullName>Type_Code__c</fullName>
    <label>Type Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TMP</fullName>
            </value>
            <value>
                <fullName>TPC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>