sas-core/main/default/objects/Travel_Pass_Product__c/fields/Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Type_Name__c</fullName>
    <label>Type Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Travel Pass Corporate</fullName>
            </value>
            <value>
                <fullName>Travel Pass Multiple Punch</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>